Fixed some bugs and responsiveness issues

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" type="text/css" href="queries.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
-        <title>Budget Calculator</title>
+        <title>CodeyCodes | Budget Calculator</title>
     </head>
 
     <body>
